# rust-jismeshcode

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  STRATEGY.md  TEST_COVERAGE.md
.github/workflows/: ci.yml
benches/: benchmarks.rs
examples/: basic_usage.rs  hierarchy_operations.rs  neighbor_analysis.rs  spatial_search.rs
src/: error.rs  lib.rs  prelude.rs
src/convert/: coord_to_mesh.rs  mesh_to_coord.rs  mod.rs
src/operations/: bounds.rs  hierarchy.rs  mod.rs  neighbors.rs
src/spatial/: mod.rs  radius.rs  range.rs
src/types/: bounding_box.rs  coordinate.rs  direction.rs  mesh_code.rs  mesh_level.rs  mod.rs
src/utils/: distance.rs  math.rs  mod.rs
tests/: conversion_test.rs  error_handling_test.rs  integration_test.rs  jis_spec_test.rs  serde_test.rs  spatial_radius_test.rs  specific_location_test.rs
