[package]
name = "jismeshcode"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
authors = ["uiuifree"]
license = "MIT OR Apache-2.0"
description = "日本標準地域メッシュコード（JIS X 0410）を扱う包括的なRustライブラリ / A comprehensive Rust library for Japanese Standard Grid Square Code"
repository = "https://github.com/uiuifree/jismeshcode"
documentation = "https://docs.rs/jismeshcode"
homepage = "https://github.com/uiuifree/jismeshcode"
readme = "README.md"
keywords = ["geospatial", "mesh", "jis", "japan", "grid"]
categories = ["science::geo", "algorithms", "data-structures"]
exclude = [".idea/", ".claude/"]

[dependencies]
thiserror = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.5"
serde_json = "1.0"
approx = "0.5"

[features]
default = ["std"]
std = ["thiserror"]
serde = ["dep:serde"]

[[bench]]
name = "benchmarks"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
